--- a/src/input.css
+++ b/src/input.css
@@ -9,18 +9,91 @@
 @tailwind components;
 @tailwind utilities;
 
+header {
+  background: #000;
+  color:green;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: 'Rye', cursive;
+  font-size: 2.75rem;
+  max-width: 100%;
+  height: 8vh;
+  margin: 0 auto;    
+}
+body {
+  background: #000;
+}
+
 .container {
-    width: 100%;
-    max-width: 100%;
-    height: 100vh;
-    display : flex;
+    display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
-    border: 3px solid black; 
+    width: fit-content;
+    max-width: 100%;
+    height: 100vh;
+    border: 3px green solid; 
     border-radius: 10px;
-    background-color: #7d6262;
-    margin: 0 auto;
+    margin: 0 auto;    
   }
+.bottomWrapper {
+    background: #000;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    border: 3px; 
+    margin: 0 auto; 
+  }
+ 
+   .paragraph {
+    position: absolute;
+    color: green;
+    font-family: 'Noto Serif', serif;
+    font-size: 1.5rem;
+    text-align: center;
+    margin: 0 auto;
+   }
+   .callMe {
+    position:absolute;
+    left: 50%;
+    transform: translate(-50%, 5%);
+    color: #ec373f;
+    font-family: 'Noto Serif', serif;
+    font-size: 1.5rem;
+    text-align: center;
+    margin: 0 auto;
+    border: 2px solid #ec373f;
+    border-radius: 10px;
+    background: #000;
+   }  
+  
+  .callMeWrapper {
+    position:relative;
+    left: 0rem;
+    top: 0rem;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.5;
+    z-index: 1;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
 .item {
   width: 100px;  
   height: 100px;  
