--- a/src/input.css
+++ b/src/input.css
@@ -17,10 +17,10 @@ header {
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-family: 'Rye', cursive;
+  font-family: 'sans-serif';
   font-size: 2.75rem;
   max-width: 100%;
-  height: 8vh;
+
   margin: 0 auto;    
 }
 body {
@@ -59,29 +59,28 @@ body {
     margin: 0 auto;
    }
    .callMe {
-    position:absolute;
-    left: 50%;
-    transform: translate(-50%, 5%);
-    color: #ec373f;
-    font-family: 'Noto Serif', serif;
-    font-size: 1.5rem;
+     
+     
+    position:relative;
+    display: flex;
     text-align: center;
+    justify-content: center;
+    top: 0rem;
+    left: 1rem; 
+    color:#ec373f;
+    font-family: 'Noto Serif', serif;
+    font-size: 1rem;
     margin: 0 auto;
+    margin-top: .5rem;
+    margin-bottom: .5rem;
     border: 2px solid #ec373f;
     border-radius: 10px;
     background: #000;
+    z-index: 22;
+    width: fit-content;
    }  
   
-  .callMeWrapper {
-    position:relative;
-    left: 0rem;
-    top: 0rem;
-    width: 100%;
-    height: 100%;
-    background: #000;
-    opacity: 0.5;
-    z-index: 1;
-  }
+ 
 
 
 
